# lidar_slam

./: CMakeLists.txt  README.md
include/: icp.h  kmeans.h
src/: icp.cpp  kmeans.cpp
test/: icp_odometry.cpp  test_kmeans.cpp
